--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <!-- 往SDCard写入数据权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!--  从SDCard读取数据权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application android:debuggable="true" android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
@@ -19,6 +24,11 @@
         </activity>
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
+        </activity>
+
+        <activity android:name=".SendPicActivity">
+        </activity>
+        <activity android:name=".ShowPicActivity">
         </activity>
     </application>
 </manifest>
