--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
+    <uses-permission android:name="android.permission.CAMERA"/>
     <!-- 往SDCard写入数据权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!--  从SDCard读取数据权限 -->
